--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -21,6 +24,5 @@ a {
   }
   body {
     color: white;
-    background: black;
   }
-}
+} */
