--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* html,
-body {
+html{
+  background-image: url("../public/dark-purple-blur-layout-vector.jpg");
+  
+}
+/* body {
   padding: 0;
   margin: 0;
+  
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -25,4 +29,4 @@ a {
   body {
     color: white;
   }
-} */
+}  */
