--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,14 @@ html{
   background-image: url("../public/dark-purple-blur-layout-vector.jpg");
   
 }
+
+.countDown {
+  
+  padding: 7px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+}
 /* body {
   padding: 0;
   margin: 0;
